tests/codegen/fail/012-min-max-simple.hyg
assert(min(201.1f, 12.1f) = 201.1f);
assert(max(201.1f, 12.1f) = 12.1f);
assert(max(201, 12) = 12);
assert(min(201, 12) = 201)